# sharp-pkg

./: .gitignore  DESIGN.md  README.md
libgit2/: CMakeLists.txt
libgit2/.github/actions/run-build/: action.yml
libgit2/.github/workflows/: nightly.yml
libgit2/cmake/: SelectHTTPSBackend.cmake
libgit2/src/cli/: CMakeLists.txt
lua/: CMakeLists.txt
spkg/: CMakeLists.txt  embed_lua.cmake  main.c  mongoose.h  native.c  node.c  spkg.h
spkg/lua/: CMakeLists.txt
spkg/scripts/: spkg_build.lua  spkg_fetch.lua  spkg_init.lua  spkg_lock.lua  spkg_resolve.lua
test-project/: config.spkg
test-project/src/: main.ce  math.ce
test-project/src/include/: types.he
